log
Mon Mar 15 13:45:59 UTC 2021: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:23:5: note: previous definition of ‘main’ was here
 int main()
     ^~~~
Compilation failed
Mon Mar 15 13:46:37 UTC 2021: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘main’:
exercises.c:26:12: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
   printf("%i", &c);
           ~^   ~~
           %ls
test.c: At top level:
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:23:5: note: previous definition of ‘main’ was here
 int main()
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 13:46:49 UTC 2021: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:23:5: note: previous definition of ‘main’ was here
 int main()
     ^~~~
Compilation failed
Mon Mar 15 13:47:26 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:13: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
    printf("%i", c);
            ~^
            %ls
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 13:47:44 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4d7dc8d
Mon Mar 15 14:10:36 UTC 2021: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a70b05a
Mon Mar 15 14:12:20 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8a88ba6
Mon Mar 15 14:17:57 UTC 2021: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  2|5
total_score: 20/70
f90536f
Mon Mar 15 14:19:12 UTC 2021: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 20/70
523fcab
Mon Mar 15 14:33:04 UTC 2021: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
6cc6339
Mon Mar 15 14:38:20 UTC 2021: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
92eba2d
Mon Mar 15 14:42:55 UTC 2021: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
29bda3f
Mon Mar 15 14:52:16 UTC 2021: 
 exercises.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  3|4
total_score: 30/70
42a974b
Mon Mar 15 15:00:29 UTC 2021: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
84a412c
Mon Mar 15 15:06:31 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
afd3fdd
Mon Mar 15 15:10:02 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f96b1e
Mon Mar 15 15:12:59 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
ebe97e8
Mon Mar 15 15:15:16 UTC 2021: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
ba696f0
Mon Mar 15 15:19:22 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
cb37c89
Mon Mar 15 15:20:29 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
8e8c5de
Mon Mar 15 15:25:31 UTC 2021: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 40/70
8aa2731
Mon Mar 15 15:26:05 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
ba6d5f9
Mon Mar 15 16:08:55 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
7b51ab9
